Page Object Model

--- a/DataDrivenFramework/test-output/html/output.html
+++ b/DataDrivenFramework/test-output/html/output.html
@@ -15,13 +15,11 @@
   </p>
 
   <div id="log">
-                  Login sucessfully executed
-                        <a target="_blank" href="D:\download.jpg">Screenshot</a>
-                        <br>
-                        <a target="_blank" href="D:\download.jpg"><img src="D:\download.jpg" height=200 width=200></img></a>
-                        <a target="_blank" href="D:\download.jpg">Screenshot</a>
-                        <br>
-                        <a target="_blank" href="D:\download.jpg"><img src="D:\download.jpg" height=200 width=200></img></a>
+                  &lt;br&gt;Verification failure : expected [abc] but found [xyz]&lt;br&gt;<br />
+                        &lt;a target=&quot;_blank&quot; href=Fri_Dec_14_15_00_34_IST_2018.jpg&gt;&lt;img src=Fri_Dec_14_15_00_34_IST_2018.jpg height=200 width=200&gt;&lt;/img&gt;&lt;/a&gt;<br />
+                        &lt;br&gt;<br />
+                        &lt;br&gt;<br />
+                        Login sucessfully executed<br />
             </div>
 
 </body>
