--- a/DataDrivenFramework/test-output/old/Suite/methods.html
+++ b/DataDrivenFramework/test-output/old/Suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8171b5">  <td>18/08/19 09:47:04</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.ddf.testcases.BankMangerLogin@5ace1ed4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1249875355</td>   <td></td> </tr>
-<tr bgcolor="b4b0af">  <td>18/08/19 09:47:17</td>   <td>12301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankMangerLogin.loginAsBankManager()[pri:0, instance:com.ddf.testcases.BankMangerLogin@5ace1ed4]">loginAsBankManager</td> 
-  <td>main@1249875355</td>   <td></td> </tr>
-<tr bgcolor="9494d8">  <td>18/08/19 09:47:18</td>   <td>13473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomer.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.ddf.testcases.AddCustomer@1613674b]">addCustomer</td> 
-  <td>main@1249875355</td>   <td></td> </tr>
-<tr bgcolor="9494d8">  <td>18/08/19 09:47:19</td>   <td>14303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomer.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.ddf.testcases.AddCustomer@1613674b]">addCustomer</td> 
-  <td>main@1249875355</td>   <td></td> </tr>
-<tr bgcolor="8171b5">  <td>18/08/19 09:47:19</td>   <td>14965</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.ddf.testcases.BankMangerLogin@5ace1ed4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1249875355</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>18/12/14 15:00:26</td>   <td>0</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.ddf.testcases.OpenAccountTest@268f106e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="956ba0">  <td>18/12/14 15:00:34</td>   <td>8270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankMangerLogin.bankMangerLogin()[pri:0, instance:com.ddf.testcases.BankMangerLogin@196a42c3]">bankMangerLogin</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>18/12/14 15:00:36</td>   <td>9794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.AddCustomer(java.util.Hashtable)[pri:0, instance:com.ddf.testcases.AddCustomerTest@5386659f]">AddCustomer</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>18/12/14 15:00:37</td>   <td>10716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.AddCustomer(java.util.Hashtable)[pri:0, instance:com.ddf.testcases.AddCustomerTest@5386659f]">AddCustomer</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>18/12/14 15:00:38</td>   <td>11401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.AddCustomer(java.util.Hashtable)[pri:0, instance:com.ddf.testcases.AddCustomerTest@5386659f]">AddCustomer</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>18/12/14 15:00:38</td>   <td>11489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.AddCustomer(java.util.Hashtable)[pri:0, instance:com.ddf.testcases.AddCustomerTest@5386659f]">AddCustomer</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="847367">  <td>18/12/14 15:00:38</td>   <td>12135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenAccountTest.OpenAccount(java.util.Hashtable)[pri:0, instance:com.ddf.testcases.OpenAccountTest@268f106e]">OpenAccount</td> 
+  <td>main@1138697171</td>   <td></td> </tr>
+<tr bgcolor="948c78">  <td>18/12/14 15:00:38</td>   <td>12236</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.ddf.testcases.OpenAccountTest@268f106e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1138697171</td>   <td></td> </tr>
 </table>
