--- a/DataDrivenFramework/test-output/old/Suite/reporter-output.html
+++ b/DataDrivenFramework/test-output/old/Suite/reporter-output.html
@@ -1,8 +1,6 @@
-<h2>Reporter output</h2><table><tr><td>Login sucessfully executed</td></tr>
-<tr><td><a target="_blank" href="D:\download.jpg">Screenshot</a></td></tr>
+<h2>Reporter output</h2><table><tr><td><br>Verification failure : expected [abc] but found [xyz]<br></td></tr>
+<tr><td><a target="_blank" href=Fri_Dec_14_15_00_34_IST_2018.jpg><img src=Fri_Dec_14_15_00_34_IST_2018.jpg height=200 width=200></img></a></td></tr>
 <tr><td><br></td></tr>
-<tr><td><a target="_blank" href="D:\download.jpg"><img src="D:\download.jpg" height=200 width=200></img></a></td></tr>
-<tr><td><a target="_blank" href="D:\download.jpg">Screenshot</a></td></tr>
 <tr><td><br></td></tr>
-<tr><td><a target="_blank" href="D:\download.jpg"><img src="D:\download.jpg" height=200 width=200></img></a></td></tr>
+<tr><td>Login sucessfully executed</td></tr>
 </table>
