--- a/PageObjectModelBasics/test-output/old/Page Object Model/reporter-output.html
+++ b/PageObjectModelBasics/test-output/old/Page Object Model/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Click to see screenshot</td></tr>
+<tr><td><a target="_blank" href=Sat_Dec_15_10_13_00_IST_2018.jpg>Screenshot</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a target="_blank" href=Sat_Dec_15_10_13_00_IST_2018.jpg><img src=Sat_Dec_15_10_13_00_IST_2018.jpg height=200 width=200></img></a></td></tr>
+</table>
