Page Object Factories

--- a/PageObjectModelBasics/test-output/html/output.html
+++ b/PageObjectModelBasics/test-output/html/output.html
@@ -16,9 +16,13 @@
 
   <div id="log">
                   Click to see screenshot
-                        <a target="_blank" href=Sun_Dec_16_15_54_43_IST_2018.jpg>Screenshot</a>
+                        <a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg>Screenshot</a>
                         <br>
-                        <a target="_blank" href=Sun_Dec_16_15_54_43_IST_2018.jpg><img src=Sun_Dec_16_15_54_43_IST_2018.jpg height=200 width=200></img></a>
+                        <a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg><img src=Mon_Dec_17_10_27_24_IST_2018.jpg height=200 width=200></img></a>
+                        Click to see screenshot
+                        <a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg>Screenshot</a>
+                        <br>
+                        <a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg><img src=Mon_Dec_17_10_28_13_IST_2018.jpg height=200 width=200></img></a>
             </div>
 
 </body>
