--- a/PageObjectModelBasics/test-output/emailable-report.html
+++ b/PageObjectModelBasics/test-output/emailable-report.html
@@ -9,10 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Page Object Model</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">8,691</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">5,795</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">CreateAccount Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">47,978</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">0</th><th class="num">0</th><th class="num attn">2</th><th class="num">53,773</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Page Object Model</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pol.testcases.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1544957137613</td><td rowspan="1">8319</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Page Object Model</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.pol.testcases.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1545022640690</td><td rowspan="1">3550</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">CreateAccount Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.pol.testcases.CreateAccountTest</td><td><a href="#m1">createAccountTest</a></td><td rowspan="1">1545022646470</td><td rowspan="1">47447</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">com.pol.testcases.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">com.pol.testcases.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com}</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Click to see screenshot<br/><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg>Screenshot</a><br/><br><br/><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg><img src=Mon_Dec_17_10_27_24_IST_2018.jpg height=200 width=200></img></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Login Test  failed
+	at com.pol.testcases.LoginTest.loginTest(LoginTest.java:32)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>CreateAccount Test</h2><h3 id="m1">com.pol.testcases.CreateAccountTest#createAccountTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{accountname=sel1}</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">Click to see screenshot<br/><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg>Screenshot</a><br/><br><br/><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg><img src=Mon_Dec_17_10_28_13_IST_2018.jpg height=200 width=200></img></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Create account test failed
+	at org.junit.Assert.fail(Assert.java:88)
+	at com.pol.testcases.CreateAccountTest.createAccountTest(CreateAccountTest.java:33)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
