--- a/PageObjectModelBasics/test-output/index.html
+++ b/PageObjectModelBasics/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Page_Object_Model">
-              <span class="suite-name border-passed">Page Object Model</span>
+              <span class="suite-name border-failed">Page Object Model</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Page_Object_Model">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods, 2 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Page_Object_Model" class="hide-methods passed suite-Page_Object_Model"> (hide)</a> <!-- hide-methods passed suite-Page_Object_Model -->
-                      <a href="#" panel-name="suite-Page_Object_Model" class="show-methods passed suite-Page_Object_Model"> (show)</a> <!-- show-methods passed suite-Page_Object_Model -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Page_Object_Model" class="hide-methods failed suite-Page_Object_Model"> (hide)</a> <!-- hide-methods failed suite-Page_Object_Model -->
+                      <a href="#" panel-name="suite-Page_Object_Model" class="show-methods failed suite-Page_Object_Model"> (show)</a> <!-- show-methods failed suite-Page_Object_Model -->
                     </span>
-                    <div class="method-list-content passed suite-Page_Object_Model">
+                    <div class="method-list-content failed suite-Page_Object_Model">
                       <span>
-                        <img width="3%" src="passed.png"/>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model" title="com.pol.testcases.CreateAccountTest" hash-for-method="createAccountTest({accountname=sel1})">createAccountTest({accountname=sel1})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="failed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model" title="com.pol.testcases.LoginTest" hash-for-method="loginTest({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com})">loginTest({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Page_Object_Model -->
+                    </div> <!-- method-list-content failed suite-Page_Object_Model -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,9 +122,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Page_Object_Model" class="panel Page_Object_Model">
-          <div class="suite-Page_Object_Model-class-passed">
+          <div class="suite-Page_Object_Model-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">com.pol.testcases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -129,10 +134,35 @@
                   </a> <!-- loginTest({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com}) -->
                   <span class="method-name">loginTest</span>
                   <span class="parameters">({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com})</span>
+                  <div class="stack-trace">java.lang.AssertionError: Login Test  failed
+	at com.pol.testcases.LoginTest.loginTest(LoginTest.java:32)
+... Removed 26 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Page_Object_Model-class-passed -->
+          </div> <!-- suite-Page_Object_Model-class-failed -->
+          <div class="suite-Page_Object_Model-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.pol.testcases.CreateAccountTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="createAccountTest({accountname=sel1})">
+                  </a> <!-- createAccountTest({accountname=sel1}) -->
+                  <span class="method-name">createAccountTest</span>
+                  <span class="parameters">({accountname=sel1})</span>
+                  <div class="stack-trace">java.lang.AssertionError: Create account test failed
+	at org.junit.Assert.fail(Assert.java:88)
+	at com.pol.testcases.CreateAccountTest.createAccountTest(CreateAccountTest.java:33)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Page_Object_Model-class-failed -->
         </div> <!-- panel Page_Object_Model -->
         <div panel-name="test-xml-Page_Object_Model" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -153,6 +183,11 @@
       &lt;class name=&quot;com.pol.testcases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Login Test --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;CreateAccount Test&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.pol.testcases.CreateAccountTest&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- CreateAccount Test --&gt;
 &lt;/suite&gt; &lt;!-- Page Object Model --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -165,6 +200,9 @@
             <ul>
               <li>
                 <span class="test-name">Login Test (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">CreateAccount Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,16 +228,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'com.pol.testcases.LoginTest')
-data.setCell(0, 3, 8319);
+data.setCell(0, 1, 'createAccountTest')
+data.setCell(0, 2, 'com.pol.testcases.CreateAccountTest')
+data.setCell(0, 3, 47447);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'loginTest')
+data.setCell(1, 2, 'com.pol.testcases.LoginTest')
+data.setCell(1, 3, 3550);
 window.suiteTableData['Page_Object_Model']= { tableData: data, tableDiv: 'times-div-Page_Object_Model'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 50 seconds</span>
               <div id="times-div-Page_Object_Model">
               </div> <!-- times-div-Page_Object_Model -->
             </div> <!-- times-div -->
@@ -210,6 +252,24 @@ return data;
             <span class="header-content">Reporter output for Page Object Model</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">loginTest({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com})</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Click to see screenshot</span>
+                <span class="reporter-method-output"><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg>Screenshot</a></span>
+                <span class="reporter-method-output"><br></span>
+                <span class="reporter-method-output"><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg><img src=Mon_Dec_17_10_27_24_IST_2018.jpg height=200 width=200></img></a></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">createAccountTest({accountname=sel1})</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Click to see screenshot</span>
+                <span class="reporter-method-output"><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg>Screenshot</a></span>
+                <span class="reporter-method-output"><br></span>
+                <span class="reporter-method-output"><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg><img src=Mon_Dec_17_10_28_13_IST_2018.jpg height=200 width=200></img></a></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Page_Object_Model" class="panel">
@@ -227,12 +287,23 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.pol.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">loginTest({RunMode=Y, password=123selenium*, username=seleniumtesterbangalore@gmail.com})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.pol.testcases.CreateAccountTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">createAccountTest({accountname=sel1})</span>
+                <span class="method-start">5780 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8681 ms</span>
+                <span class="method-start">53887 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
