--- a/PageObjectModelBasics/test-output/old/Page Object Model/methods-alphabetical.html
+++ b/PageObjectModelBasics/test-output/old/Page Object Model/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object Model</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf6e72">  <td>18/12/16 16:15:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.LoginTest@726e5805]">loginTest</td> 
-  <td>main@1626852381</td>   <td></td> </tr>
-<tr bgcolor="dfada3">  <td>18/12/16 16:15:46</td>   <td>8681</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.pol.testcases.LoginTest@726e5805]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1626852381</td>   <td></td> </tr>
+<tr bgcolor="ab8d8f">  <td>18/12/17 10:27:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAccountTest.createAccountTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.CreateAccountTest@dcfda20]">createAccountTest</td> 
+  <td>main@34073107</td>   <td></td> </tr>
+<tr bgcolor="798b9b">  <td>18/12/17 10:27:20</td>   <td>-5780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.LoginTest@531c311e]">loginTest</td> 
+  <td>main@34073107</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>18/12/17 10:28:14</td>   <td>48108</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.pol.testcases.CreateAccountTest@dcfda20]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@34073107</td>   <td></td> </tr>
 </table>
