--- a/PageObjectModelBasics/test-output/old/Page Object Model/reporter-output.html
+++ b/PageObjectModelBasics/test-output/old/Page Object Model/reporter-output.html
@@ -1,1 +1,9 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Click to see screenshot</td></tr>
+<tr><td><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg>Screenshot</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a target="_blank" href=Mon_Dec_17_10_27_24_IST_2018.jpg><img src=Mon_Dec_17_10_27_24_IST_2018.jpg height=200 width=200></img></a></td></tr>
+<tr><td>Click to see screenshot</td></tr>
+<tr><td><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg>Screenshot</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a target="_blank" href=Mon_Dec_17_10_28_13_IST_2018.jpg><img src=Mon_Dec_17_10_28_13_IST_2018.jpg height=200 width=200></img></a></td></tr>
+</table>
