Added Error Collector and Test Listener Adapter

--- a/PageObjectFactories/test-output/index.html
+++ b/PageObjectFactories/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories">
-              <span class="suite-name border-passed">Page Object Model With Page Factories</span>
+              <span class="suite-name border-failed">Page Object Model With Page Factories</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="hide-methods failed suite-Page_Object_Model_With_Page_Factories"> (hide)</a> <!-- hide-methods failed suite-Page_Object_Model_With_Page_Factories -->
+                      <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="show-methods failed suite-Page_Object_Model_With_Page_Factories"> (show)</a> <!-- show-methods failed suite-Page_Object_Model_With_Page_Factories -->
+                    </span>
+                    <div class="method-list-content failed suite-Page_Object_Model_With_Page_Factories">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories" title="com.pol.testcases.FlightSearchTest" hash-for-method="flightSearchTest">flightSearchTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Page_Object_Model_With_Page_Factories -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,11 +114,6 @@
                       <a href="#" panel-name="suite-Page_Object_Model_With_Page_Factories" class="show-methods passed suite-Page_Object_Model_With_Page_Factories"> (show)</a> <!-- show-methods passed suite-Page_Object_Model_With_Page_Factories -->
                     </span>
                     <div class="method-list-content passed suite-Page_Object_Model_With_Page_Factories">
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories" title="com.pol.testcases.FlightSearchTest" hash-for-method="flightSearchTest">flightSearchTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Page_Object_Model_With_Page_Factories" title="com.pol.testcases.LoginTest" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
@@ -122,9 +131,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Page_Object_Model_With_Page_Factories" class="panel Page_Object_Model_With_Page_Factories">
-          <div class="suite-Page_Object_Model_With_Page_Factories-class-passed">
+          <div class="suite-Page_Object_Model_With_Page_Factories-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">com.pol.testcases.FlightSearchTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -133,10 +142,26 @@
                   <a name="flightSearchTest">
                   </a> <!-- flightSearchTest -->
                   <span class="method-name">flightSearchTest</span>
+                  <div class="stack-trace">java.lang.Throwable: Multiple failures (2):
+
+Failure 1 of 2:
+java.lang.AssertionError: expected [7] but found [5]
+	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
+	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
+	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:20)
+
+
+Failure 2 of 2:
+java.lang.AssertionError: expected [8] but found [5]
+	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
+	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
+	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:21)
+... Removed 60 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Page_Object_Model_With_Page_Factories-class-passed -->
+          </div> <!-- suite-Page_Object_Model_With_Page_Factories-class-failed -->
           <div class="suite-Page_Object_Model_With_Page_Factories-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -165,6 +190,7 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
+    &lt;listener class-name=&quot;com.pol.errorcollectors.TestListenerAdapter&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Login Test&quot;&gt;
     &lt;classes&gt;
@@ -220,11 +246,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'flightSearchTest')
 data.setCell(0, 2, 'com.pol.testcases.FlightSearchTest')
-data.setCell(0, 3, 52958);
+data.setCell(0, 3, 40269);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginTest')
 data.setCell(1, 2, 'com.pol.testcases.LoginTest')
-data.setCell(1, 3, 27687);
+data.setCell(1, 3, 26726);
 window.suiteTableData['Page_Object_Model_With_Page_Factories']= { tableData: data, tableDiv: 'times-div-Page_Object_Model_With_Page_Factories'}
 return data;
 }
@@ -257,6 +283,8 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.pol.testcases.FlightSearchTest</div> <!-- chronological-class-name -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">flightSearchTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
@@ -265,7 +293,7 @@ return data;
               <div class="chronological-class-name">com.pol.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">53652 ms</span>
+                <span class="method-start">40315 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
