--- a/PageObjectFactories/test-output/emailable-report.html
+++ b/PageObjectFactories/test-output/emailable-report.html
@@ -9,14 +9,28 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Page Object Model With Page Factories</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">52,997</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">CreateAccount Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">27,698</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">80,695</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">40,300</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">CreateAccount Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">26,726</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num attn">1</th><th class="num">67,026</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Page Object Model With Page Factories</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pol.testcases.FlightSearchTest</td><td><a href="#m0">flightSearchTest</a></td><td rowspan="1">1545660492278</td><td rowspan="1">52958</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">CreateAccount Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pol.testcases.LoginTest</td><td><a href="#m1">loginTest</a></td><td rowspan="1">1545660545930</td><td rowspan="1">27687</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Page Object Model With Page Factories</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.pol.testcases.FlightSearchTest</td><td><a href="#m0">flightSearchTest</a></td><td rowspan="1">1545716855604</td><td rowspan="1">40269</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">CreateAccount Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pol.testcases.LoginTest</td><td><a href="#m1">loginTest</a></td><td rowspan="1">1545716895919</td><td rowspan="1">26726</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">com.pol.testcases.FlightSearchTest#flightSearchTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">com.pol.testcases.FlightSearchTest#flightSearchTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Multiple failures (2):
+
+Failure 1 of 2:
+java.lang.AssertionError: expected [7] but found [5]
+	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
+	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
+	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:20)
+
+
+Failure 2 of 2:
+java.lang.AssertionError: expected [8] but found [5]
+	at com.pol.errorcollectors.ErrorCollector.assertEquals(ErrorCollector.java:38)
+	at com.pol.errorcollectors.ErrorCollector.verifyEquals(ErrorCollector.java:102)
+	at com.pol.testcases.FlightSearchTest.flightSearchTest(FlightSearchTest.java:21)
+... Removed 60 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h2>CreateAccount Test</h2><h3 id="m1">com.pol.testcases.LoginTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
