--- a/PageObjectFactories/test-output/old/Page Object Model With Page Factories/methods-alphabetical.html
+++ b/PageObjectFactories/test-output/old/Page Object Model With Page Factories/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Page Object Model With Page Factories</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7863de">  <td>18/12/24 19:38:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightSearchTest.flightSearchTest()[pri:0, instance:com.pol.testcases.FlightSearchTest@17695df3]">flightSearchTest</td> 
-  <td>main@341853399</td>   <td></td> </tr>
-<tr bgcolor="7776a8">  <td>18/12/24 19:39:05</td>   <td>53652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.pol.testcases.LoginTest@69a10787]">loginTest</td> 
-  <td>main@341853399</td>   <td></td> </tr>
+<tr bgcolor="f27fae">  <td>18/12/25 11:17:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightSearchTest.flightSearchTest()[pri:0, instance:com.pol.testcases.FlightSearchTest@de3a06f]">flightSearchTest</td> 
+  <td>main@366590980</td>   <td></td> </tr>
+<tr bgcolor="727a61">  <td>18/12/25 11:18:15</td>   <td>40315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.pol.testcases.LoginTest@2bbaf4f0]">loginTest</td> 
+  <td>main@366590980</td>   <td></td> </tr>
 </table>
