--- a/CucumberPageObjects/test-output/index.html
+++ b/CucumberPageObjects/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="runner.RunCuke" hash-for-method="runScenario(&quot;Validate Used Cars Page&quot;, &quot;Acceptance testing to validate used search cars page is working&quot;)">runScenario("Validate Used Cars Page", "Acceptance testing to validate used search cars page is working")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="runner.RunCuke" hash-for-method="runScenario(&quot;Validate Search Cars Page&quot;, &quot;Acceptance testing to validate search cars page is working&quot;)">runScenario("Validate Search Cars Page", "Acceptance testing to validate search cars page is working")</a> <!-- method navigator-link -->
@@ -123,6 +128,16 @@
               <span class="class-name">runner.RunCuke</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Validate Used Cars Page&quot;, &quot;Acceptance testing to validate used search cars page is working&quot;)">
+                  </a> <!-- runScenario("Validate Used Cars Page", "Acceptance testing to validate used search cars page is working") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Validate Used Cars Page", "Acceptance testing to validate used search cars page is working")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="runScenario(&quot;Validate Search Cars Page&quot;, &quot;Acceptance testing to validate search cars page is working&quot;)">
@@ -195,16 +210,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runner.RunCuke')
-data.setCell(0, 3, 45697);
+data.setCell(0, 3, 87795);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'runner.RunCuke')
+data.setCell(1, 3, 39874);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -237,15 +256,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">153 ms</span>
+                <span class="method-start">214 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Validate Search Cars Page", "Acceptance testing to validate search cars page is working")</span>
-                <span class="method-start">229 ms</span>
+                <span class="method-start">319 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Validate Used Cars Page", "Acceptance testing to validate used search cars page is working")</span>
+                <span class="method-start">88122 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">45927 ms</span>
+                <span class="method-start">127999 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
