Page Object Extended

--- a/PageObjectExtended/test-output/old/Suite/methods-alphabetical.html
+++ b/PageObjectExtended/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a3707a">  <td>19/01/13 16:10:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@11758f2a]">loginTest</td> 
-  <td>TestNG-PoolService-1@1484267398</td>   <td></td> </tr>
-<tr bgcolor="a3707a">  <td>19/01/13 16:10:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@11758f2a]">loginTest</td> 
-  <td>TestNG-PoolService-1@1484267398</td>   <td></td> </tr>
-<tr bgcolor="a3707a">  <td>19/01/13 16:10:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@11758f2a]">loginTest</td> 
-  <td>TestNG-PoolService-1@1484267398</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:08:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">loginTest</td> 
+  <td>TestNG-PoolService-2@773919836</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:08:50</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">loginTest</td> 
+  <td>TestNG-PoolService-2@773919836</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:08:50</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">loginTest</td> 
+  <td>TestNG-PoolService-2@773919836</td>   <td></td> </tr>
+<tr bgcolor="689365">  <td>19/01/14 08:08:50</td>   <td>-701</td> <td title="&gt;&gt;BaseTest.setUpFramework()[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">&gt;&gt;setUpFramework</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@591391158</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:09:14</td>   <td>24108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-1@638312694</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:09:15</td>   <td>24301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-1@638312694</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>19/01/14 08:09:28</td>   <td>37399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.zoho.testcases.LoginTest@3bd40a57]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-PoolService-1@638312694</td>   <td></td> </tr>
 </table>
